@@ -307,6 +307,8 @@ Changes since 2.2.4
      function from slposdir.c and a shadowed variable from slpath.c
 127. documentation updates (Manfred Hanke)
 128. modules/test/: Additional json-modules tests (Manfred Hanke)
+129. src/slarray.c: Allow functions called by array_map to return
+     NULL. (Manfred Hanke)
 
 {{{ Previous Versions
 
